# windows-test-regex

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  test.cc
.github/workflows/: mac.yml  ubuntu.yml  win.yml
