load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-4e9fe30884414b58d219d0170d39cbad96e5758a",
    urls = ["https://github.com/google/googletest/archive/4e9fe30884414b58d219d0170d39cbad96e5758a.zip"],
)
